--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ djangorestframework==3.16.0
 psycopg2==2.9.10
 
 django-hosts==7.0.0
+django-redis==6.0.0
+django-extensions==4.1
 
 hashids==1.3.1
 
