--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-hosts==7.0.0
 django-redis==6.0.0
 django-extensions==4.1
 django-widget-tweaks==1.5.0
+django-tables2==2.7.5
 
 hashids==1.3.1
 
