--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-redis==6.0.0
 django-extensions==4.1
 django-widget-tweaks==1.5.0
 django-tables2==2.7.5
+django-filter==25.1
 
 hashids==1.3.1
 
