--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,8 +23,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        uv pip install --upgrade pip
-        uv pip install -r requirements.lock
+        python -m pip install --upgrade pip
+        pip install -r requirements.lock
     - name: Run Tests
       run: |
         python manage.py test
