--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,24 +8,25 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.11]
+        python-version: [ 3.11 ]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.lock
-    - name: Run Tests
-      run: |
-        python manage.py test
-        fab check
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install uv
+        run: pip install uv
+      - name: Install Dependencies
+        run: uv pip install -r requirements.lock
+      - name: Run code check
+        run: |
+          uv run fab check
+      - name: Run Tests
+        run: |
+          uv run python manage.py test --settings=test_settings
