--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install uv
         run: pip install uv
       - name: Install Dependencies
-        run: uv pip install -r requirements.lock
+        run: uv pip install --system -r requirements.lock
       - name: Run code check
         run: |
           uv run fab check
