--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -18,10 +18,16 @@ jobs:
       postgres:
         image: postgres:17
         env:
+          POSTGRES_DB: ${{ secrets.DATABASE_NAME }}
           POSTGRES_USER: ${{ secrets.DATABASE_USER }}
           POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
         ports:
           - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U ${{ secrets.DATABASE_USER }} -d ${{ secrets.DATABASE_NAME }}"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     env:
       SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
@@ -50,19 +56,6 @@ jobs:
         run: |
           python manage.py check
           flake8
-
-      - name: Wait for DB
-        run: |
-          for i in {1..3}; do
-            echo "Checking postgres:$DATABASE_PORT (try $i)..."
-            if pg_isready -h $DATABASE_HOST -p $DATABASE_PORT -U $DATABASE_USER; then
-              echo "Postgres is ready!"
-              exit 0
-            fi
-            sleep 5
-          done
-          echo "Postgres did not become ready in time" >&2
-          exit 1
 
       - name: Run Tests
         run: |
