--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,14 @@ django-extensions==4.1
 django-widget-tweaks==1.5.0
 django-tables2==2.7.5
 django-filter==25.1
+drf-spectacular==0.28.0
+drf-spectacular-sidecar==2025.9.1
 
 hashids==1.3.1
 requests==2.32.5
 openpyxl==3.1.5
 beautifulsoup4==4.13.5
+markdown==3.9
 
 factory-boy==3.3.3
 
