--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "fabric==3.2.2",
     "factory-boy==3.3.3",
     "flake8==7.3.0",
+    "hashids>=1.3.1",
     "ipython==9.4.0",
     "jedi==0.19.2",
     "psycopg2==2.9.10",
+    "requests>=2.32.5",
 ]
