--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install env
         run: |
           pip install uv
-          uv sync --frozen --active
+          uv sync --frozen
 
       - name: Run code check
         run: |
