--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -15,21 +15,23 @@ jobs:
         python-version: [ 3.11 ]
 
     env:
+      UV_PYTHON: ${{ matrix.python-version }}
       SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
       DJANGO_SETTINGS_MODULE: test_settings
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version-file: "pyproject.toml"
 
-      - name: Install env
-        run: |
-          pip install uv
-          uv sync --frozen --python $(which python)
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
 
       - name: Run code check
         run: |
