--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,11 +1,3 @@
-name: Django CI
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,18 +14,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: "Set up Python"
-        uses: actions/setup-python@v5
-        with:
-          python-version-file: "pyproject.toml"
-
       - name: Install uv
         uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: true
+          python-version: ${{ matrix.python-version }}
 
       - name: Install the project
         run: uv sync --locked --all-extras --dev
 
-      - name: Run code check
+      - name: Run checks
         run: |
-          python manage.py check
-          flake8
+          uv run python manage.py check
+          uv run flake8
