--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -38,7 +38,7 @@ jobs:
       DATABASE_NAME: test_db
       DATABASE_USER: test_user
       DATABASE_PASSWORD: test_password
-      DATABASE_HOST: postgres
+      DATABASE_HOST: localhost
       DATABASE_PORT: 5432
 
     steps:
