--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires-python = ">=3.11"
 
 dependencies = [
     "celery==5.5.3",
+    "coverage>=7.10.6",
     "django==5.2.4",
     "django-extensions==4.1",
     "django-filter==25.1",
