--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.11"
 
 dependencies = [
+    "bs4>=0.0.2",
     "celery==5.5.3",
     "coverage>=7.10.6",
     "django==5.2.4",
@@ -22,6 +23,7 @@ dependencies = [
     "hashids>=1.3.1",
     "ipython==9.4.0",
     "jedi==0.19.2",
+    "openpyxl>=3.1.5",
     "psycopg2==2.9.10",
     "requests>=2.32.5",
 ]
